# tube

./: .gitignore  DETAILED_DESIGN_DOC.md  IMPLEMENTATION_GUIDE.md  README.md  TECHNICAL_REPORT.md  VERIFICATION.md  pyproject.toml  run_all_cases.sh  setup.cfg  赛项名称：基于管单元的高温管道蠕变高效求解.md
scripts/: compare_ansys_csv.py  compare_ansys_timeseries.py  verify_physics.py  verify_results_data.py
src/tubo/: cli.py  model.py
src/tubo/cdb/: parser.py
src/tubo/solver/: assembly.py  creep.py  linear_static.py  modal.py
src/tubo/vtk/: pvd.py  surface.py  writer.py
开放原子-管单元/: ELBOW290_CREEP.cdb  ELBOW290_PLAST.cdb  PIPE288_CREEP.cdb  PIPE288_PLAST.cdb  PIPEMIX_CREEP.cdb  PIPEMIX_PLAST.cdb  算例说明.md
