[project]
name = "tubo"
version = "0.1.0"
description = "Pipe element based high-temperature creep solver (competition scaffold)"
requires-python = ">=3.10"
authors = [{name = "tubo team"}]
dependencies = [
  "numpy>=1.24",
]

[project.scripts]
tubo = "tubo.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
