[metadata]
name = tubo
version = 0.1.0
description = Pipe element based high-temperature creep solver (competition scaffold)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.24

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tubo = tubo.cli:main
